--- a/Root/index.html
+++ b/Root/index.html
@@ -5,6 +5,15 @@
         <title>Compaq Portable III Restoration</title>
     </head>
     <body>
-
+        <header> 
+            <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo">
+            <h1> Home </h1>
+        </header> 
+        <div>
+            <img src = images/Picture5.png alt ="All three generations of Compaq Portables side by side">
+        </div>
+        <footer> 
+            <a href = "second.html">Compaq History</a> <a href = "third.html">Portable III</a> 
+        </footer>
     </body>
 </html>
