--- a/Root/index.html
+++ b/Root/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header> 
-            <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo">
+            <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
             <h1> Home </h1>
         </header> 
         <div>
