Basically everything for Hp7

--- a/Root/second.html
+++ b/Root/second.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <header>
         <div>
-            <img src="Images/Compaq-Logo-1982.png" alt="Compaq Logo from 1982" width="100" height="50">
+            <img src="Images/Compaq-Logo-1982.png" alt="Compaq Logo from 1982" width="200" height="150">
         </div>
         <div>
             <h1>
@@ -12,17 +12,48 @@
         <div>
             <!--Menu Drop down will be here once we figure it out-->
         </div>
+        <div>
+            <!--Quick links to different parts of the history page-->
+        </div>
     </header>
 
     <main>
         <div>
             <!--IBM PC Container-->
+            <img src="Images/Picture1.png" alt="Picture of the first IBM PC" width="150" height="100">
+            <h2>
+                The first IBM PC
+            </h2>
+            <p>
+                The IBM PC was a revolutionary piece of computing history, which made x86 architecture industry standard even to this day in addition to bringing MS DOS to the forefront of operating systems.
+                To cut costs the IBM PC used entirely off the shelf parts, with the only thing IBM has legal stake over was its BIOS.
+                This helped standardize computer architecture (beforehand there were over 100 different computer architectures most of which were incompatible with each other and brought up a slew of PC clones/compatibles.
+                Compaq made one of the earliest PC clones with the unique twist of making it portable that put them on the map
+            </p>
         </div>
         <div>
             <!--First Portable Container-->
+            <img src="Images/Picture2.png" alt="Picture of the first portable PC" width="150" height="100">
+            <h2>
+                The First “Portable” Computer
+            </h2>
+            <p>
+                Compaq was not the first to make a portable computer, that title goes to the Osborne I in 1981. This computer released shortly before the IBM PC, so it was not IBM compatible and ran CP/M.
+                The success of the Osborne inspired Compaq, as the premise of portable computers was very interesting to businessmen on the go. Portable computers of the time were affectionately nicknamed “Luggables” as many of them weighed in close to 25 pounds! 
+            </p>
         </div>
         <div>
             <!--Founding Container-->
+            <img src="Images/Picture3.png" alt="Picture of the three founders of Compaq" width="150" height="100">
+            <h2>
+                The Founding of Compaq Computer Corporation
+            </h2>
+            <p>
+                Compaq Computer Corporation was founded on February 16, 1982 by Rod Canion, Bill Murto, and Jim Harris, former Texas Instrument employees who set out to pursue the exploding computer market.
+                Compaq was a pioneer in the IBM compatible/clone market, not only making one of the earliest compatibles, but having the computer be portable and pretty close to 100% compatible with IBM software making it a smash hit.
+                Compaq was famous for their portable lineup in the 80s, and also made desktops that undercut the competition. They were a force to be reckoned with in the 80s and early 90s, then became undercut by Dell in addition to failing to adapt to changes in the industry.
+                Compaq was acquired by HP in 2001, who used their brand name to make low-end desktops which was discontinued in 2013. HP also provided support for Compaq machines for a time.
+            </p>
         </div>
     </main>
     
