--- a/Root/third.html
+++ b/Root/third.html
@@ -5,6 +5,41 @@
         <title>Compaq Portable III Restoration</title>
     </head>
     <body>
-      
+      <header> 
+        <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+        <h1> Portable III </h1>
+     </header> 
+     <main>
+        <div> <!--Overview Container-->
+          <img src = images/Picture4.png alt ="An ad for the Portable III">
+          <h2>Overview</h2>
+          <p>Compaq was most famous for the Portable lineup in the 80s. 
+            Able to do the impressive feat of making portable computers run better than the original IBM hardware they were “imitating”. 
+            The Portable III is an interesting machine with many of the innovative features Compaq was known for. 
+            The Intel 386 processor was released in 1985, and Compaq wanted to use this new 32-bit processor for its third-generation of the Portable lineup. 
+            However, this was not possible due to a lack of supporting hardware because the processor was so new. 
+            Increasing competition also meant market dominance was threatened if they waited. 
+            The 16-bit 286 was still a perfectly capable and respectable standard for the era and as a stop gap they released the Compaq Portable III with 286 hardware as a stopgap with great reception. 
+            An interesting feature of the 286 model is its ability to swap clock speeds between 8-12 MHz based on compatibility. 
+            Like the hybrid video cards of the Portable lineup, it could be hard set to one speed or the other, but by default switches according to software needs. 
+            The 386 runs on 20MHz. 
+          </p>
+        </div>
+        <div><!--Innovations Container-->
+          <img src = images/Picture5.png alt ="A magazine ad showing just how much smaller the Portable II was in relation to its predecessors">
+          <h2>Innovations of the Portable Lineup</h2>
+          <p>Compaq had to get creative when designing the portable lineup. Say you wanted to buy an IBM PC, you would have to choose a graphics card and the monitor to support it. 
+            MDA (Monocrhome Display Adapter) Was a monochrome graphics mode typically in green or amber colors. 
+            Businesses claimed MDA graphics were easier on the eyes and the conserved resources that would otherwise be invested into color can be utilized for sharper looking text.
+            CGA (Color Graphics Adapter) was more expensive but offered (by today’s standards crude) color to your machine. CGA Text is a bit “chunky” and the overall resolution of CGA was lower than MDA.
+            With Compaq’s portable lineup, the monitor was built in and in order to make the machine accessible they made a hybrid graphics card that supports both CGA and MDA. 
+            The built-in monitor for most Portables was monochrome, but CGA could be fully utilized on an external monitor. 
+            The hybrid card could be hard-set to one mode and by default it could also swap on the fly based on software needs. 
+          </p>
+      </div>
+     </main>
+     <footer>
+        <a href="index.html">Home</a>
+     </footer>
    </body>
 </html> 
