Changed home picture and added link

--- a/Root/index.html
+++ b/Root/index.html
@@ -10,10 +10,10 @@
             <h1> Home </h1>
         </header> 
         <div>
-            <img src = images/Picture5.png alt ="All three generations of Compaq Portables side by side">
+            <img src = images/HomeImage.png alt ="All three generations of Compaq Portables side by side">
         </div>
         <footer> 
-            <a href = "second.html">Compaq History</a> <a href = "third.html">Portable III</a> 
+            <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a>
         </footer>
     </body>
 </html>
