Made resources page

--- a/Root/index.html
+++ b/Root/index.html
@@ -13,7 +13,8 @@
             <img src = images/HomeImage.png alt ="All three generations of Compaq Portables side by side">
         </div>
         <footer> 
-            <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a>
+            <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
+            <a href = "third.html">Portable III</a>   <a href = "fifth.html">Advanced Issues</a>
         </footer>
     </body>
 </html>
