--- a/Root/index.html
+++ b/Root/index.html
@@ -14,7 +14,7 @@
         </div>
         <footer> 
             <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
-            <a href = "third.html">Portable III</a>   <a href = "fifth.html">Advanced Issues</a>
+            <a href = "third.html">Portable III</a>   <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Advanced Issues</a>
         </footer>
     </body>
 </html>
