--- a/Root/second.html
+++ b/Root/second.html
@@ -2,8 +2,9 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-          <title>Compaq Portable III Restoration</title>
-      </head>
+        <title>Compaq Portable III Restoration</title>
+        <link rel ="stylesheet" href="StyleSheets/global.css">
+    </head>
     <body>
         <header>
             <div>
