--- a/Root/sixth.html
+++ b/Root/sixth.html
@@ -2,7 +2,8 @@
 <html lang = "en">
     <head>
       <meta charset = "UTF-8">
-        <title>Compaq Portable III Restoration</title>
+      <link rel ="stylesheet" href="StyleSheets/global.css">
+      <title>Compaq Portable III Restoration</title>
     </head>
     <body>
       <header> 
@@ -11,7 +12,8 @@
      </header> 
      <main>
         <div> <!--Keyboard Container-->
-          <img src = images/CroppedAd.png alt ="An ad boasting the Compaq's featues"> <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
+          <img src = images/CroppedAd.png alt ="An ad boasting the Compaq's featues" width="838" height="585"> <!--Default Dimensions: 2513x1755--> 
+          <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
           <h2>Amazon Links</h2>
           <p>
             <a href="https://www.amazon.com/Keyboard-Extension-Female-Conductor-Straight/dp/B000I94JXM">Replacement Keyboard Cable</a>
