--- a/Root/index.html
+++ b/Root/index.html
@@ -2,6 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
+        <link rel ="stylesheet" href="StyleSheets/global.css">
         <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -10,11 +11,11 @@
             <h1> Home </h1>
         </header> 
         <div>
-            <img src = images/HomeImage.png alt ="All three generations of Compaq Portables side by side">
+            <img src = images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
         </div>
         <footer> 
             <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
-            <a href = "third.html">Portable III</a>   <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Advanced Issues</a>
+            <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
         </footer>
     </body>
 </html>
