--- a/Root/third.html
+++ b/Root/third.html
@@ -2,7 +2,8 @@
 <html lang = "en">
     <head>
       <meta charset = "UTF-8">
-        <title>Compaq Portable III Restoration</title>
+      <link rel ="stylesheet" href="StyleSheets/global.css">
+      <title>Compaq Portable III Restoration</title>
     </head>
     <body>
       <header> 
