--- a/Root/fourth.html
+++ b/Root/fourth.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset = "UTF-8">
       <link rel ="stylesheet" href="StyleSheets/global.css">
+      <link rel ="stylesheet" href="StyleSheets/articles.css">
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -11,7 +12,7 @@
         <h1> Common Issues </h1>
      </header> 
      <main>
-        <div> <!--Keyboard Container-->
+        <div id="KeyboardCable"> <!--Keyboard Container-->
           <img src = images/Picture6.png alt ="A picture of a rotting keyboard cable">
           <h2>Rotting Keyboard Cable</h2>
           <p>
@@ -21,16 +22,16 @@
             See Advanced Issues for the in depth guide on solving the problem. <!--Instead of being delegated to Advanced Issues, links to articles will be provided for solutions-->
           </p>
         </div>
-        <div><!--CMOS Container-->
+        <div id="cmos"><!--CMOS Container-->
           <img src = images/Picture8.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right">
           <h2>Dead CMOS Battery</h2>
           <p>
             This issue may only become apparent later, as sometimes the battery still has some juice in it upon bootup. You need the diagnostics floppy disk to access the BIOS and reenter settings, which has been made freely available online. 
-            Documentation on replacing the battery is nonexistent. And by modern standards this battery is strange, a dual cell 3.4V Lithium brick. 
-            Finding a way to get a 3.3V coin cell battery to take its place is the best way to fix this.   
+            Documentation on replacing the battery is nonexistent. And by modern standards this battery is strange, a dual cell 3.4V Lithium brick. Refurbishing the oringinal
+            or modding in a modern replacement are the only options here. WARNING: tampering with battery cells is a fire hazard.    
           </p>
       </div>
-      <div><!--Floppy Container-->
+      <div id="floppy"><!--Floppy Container-->
         <img src = images/Picture8.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right">
         <h2>Dirty or Jammed Floppy Drive</h2>
         <p>
@@ -38,7 +39,7 @@
            A good clean with isopropyl alcohol and lubrication of the rails with lithium grease should fix this issue.
         </p>
     </div>
-     </main>
+    </main>
      <footer>
         <a href="index.html">Home</a>
      </footer>
