Added basic style to all tabs

--- a/Root/sixth.html
+++ b/Root/sixth.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset = "UTF-8">
       <link rel ="stylesheet" href="StyleSheets/global.css">
+      <link rel ="stylesheet" href="StyleSheets/articles.css">
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -11,7 +12,7 @@
         <h1> Useful Resources</h1>
      </header> 
      <main>
-        <div> <!--Keyboard Container-->
+        <div id="links"> <!--Keyboard Container-->
           <img src = images/CroppedAd.png alt ="An ad boasting the Compaq's featues" width="838" height="585"> <!--Default Dimensions: 2513x1755--> 
           <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
           <h2>Amazon Links</h2>
@@ -38,7 +39,7 @@
             </a> is useful for finding important files online. 
           </p>
         </div>
-        <div>
+        <div id="manual">
             <h2>Manuals</h2>
             <p>
                 <a href="OtherLinks/Compaq Portable 3 Operations User Manual_text.pdf">User Operations Manual</a>
@@ -48,7 +49,7 @@
                 the 286 manual seems to be harder to find. 
             </p>
         </div>
-        <div>
+        <div id="files">
             <h2>Important Files</h2>
             <p>
                 Diagnostic Floppy Disk, allows for access to BIOS and configure settings/troubleshoot 
