--- a/Root/third.html
+++ b/Root/third.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset = "UTF-8">
       <link rel ="stylesheet" href="StyleSheets/global.css">
+      <link rel ="stylesheet" href="StyleSheets/articles.css">
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -11,7 +12,7 @@
         <h1> Portable III </h1>
      </header> 
      <main>
-        <div> <!--Overview Container-->
+        <div id="overview"> <!--Overview Container-->
           <img src = images/Picture4.png alt ="An ad for the Portable III">
           <h2>Overview</h2>
           <p>Compaq was most famous for the Portable lineup in the 80s. 
@@ -26,7 +27,7 @@
             The 386 runs on 20MHz. 
           </p>
         </div>
-        <div><!--Innovations Container-->
+        <div id="innovation"><!--Innovations Container-->
           <img src = images/Picture5.png alt ="A magazine ad showing just how much smaller the Portable II was in relation to its predecessors">
           <h2>Innovations of the Portable Lineup</h2>
           <p>Compaq had to get creative when designing the portable lineup. Say you wanted to buy an IBM PC, you would have to choose a graphics card and the monitor to support it. 
