--- a/Root/fifth.html
+++ b/Root/fifth.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset = "UTF-8">
       <link rel ="stylesheet" href="StyleSheets/global.css">
+      <link rel ="stylesheet" href="StyleSheets/articles.css">
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -11,7 +12,7 @@
         <h1> Advanced Issues </h1>
      </header> 
      <main>
-        <div> <!--Keyboard Container-->
+        <div id=screen> <!--Keyboard Container-->
           <img src = images/Picture9.png alt ="Example of screen problems"> <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
           <h2>Plasma Screen</h2>
           <p>
