--- a/Root/second.html
+++ b/Root/second.html
@@ -4,6 +4,7 @@
         <meta charset = "UTF-8">
         <title>Compaq Portable III Restoration</title>
         <link rel ="stylesheet" href="StyleSheets/global.css">
+        <link rel ="stylesheet" href="StyleSheets/articles.css">
     </head>
     <body>
         <header>
@@ -15,16 +16,9 @@
                     History of Compaq
                 </h1>
             </div>
-            <div>
-                <!--Menu Drop down will be here once we figure it out-->
-            </div>
-            <div>
-                <!--Quick links to different parts of the history page-->
-            </div>
         </header>
-
         <main>
-            <div>
+            <div id="IBMPC">
                 <!--IBM PC Container-->
                 <img src="Images/Picture1.png" alt="Picture of the first IBM PC" width="150" height="100">
                 <h2>
@@ -37,7 +31,7 @@
                     Compaq made one of the earliest PC clones with the unique twist of making it portable that put them on the map
                 </p>
             </div>
-            <div>
+            <div id="Osborne">
                 <!--First Portable Container-->
                 <img src="Images/Picture2.png" alt="Picture of the first portable PC" width="150" height="100">
                 <h2>
@@ -48,7 +42,7 @@
                     The success of the Osborne inspired Compaq, as the premise of portable computers was very interesting to businessmen on the go. Portable computers of the time were affectionately nicknamed “Luggables” as many of them weighed in close to 25 pounds! 
                 </p>
             </div>
-            <div>
+            <div id="founding">
                 <!--Founding Container-->
                 <img src="Images/Picture3.png" alt="Picture of the three founders of Compaq" width="150" height="100">
                 <h2>
