--- a/fifth.html
+++ b/fifth.html
@@ -8,12 +8,12 @@
     </head>
     <body>
       <header> 
-        <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+        <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
         <h1> Advanced Issues </h1>
      </header> 
      <main>
         <div id=screen> <!--Keyboard Container-->
-          <img src = images/Picture9.png alt ="Example of screen problems"> <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
+          <img src = Images/Picture9.png alt ="Example of screen problems"> <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
           <h2>Plasma Screen</h2>
           <p>
             What sets the Portable III apart from its predecesors is the amber gas plasma display. 
