--- a/fourth.html
+++ b/fourth.html
@@ -8,12 +8,12 @@
     </head>
     <body>
       <header> 
-        <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+        <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
         <h1> Common Issues </h1>
      </header> 
      <main>
         <div id="KeyboardCable"> <!--Keyboard Container-->
-          <img src = images/Picture6.png alt ="A picture of a rotting keyboard cable">
+          <img src = Images/Picture6.png alt ="A picture of a rotting keyboard cable">
           <h2>Rotting Keyboard Cable</h2>
           <p>
             Dry rot of the keyboard connector cable is common. 
@@ -22,7 +22,7 @@
           </p>
         </div>
         <div id="cmos"><!--CMOS Container-->
-          <img src = images/Picture8.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right">
+          <img src = Images/Picture8.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right">
           <h2>Dead CMOS Battery</h2>
           <p>
             This issue may only become apparent later, as sometimes the battery still has some juice in it upon bootup. You need the diagnostics floppy disk to access the BIOS and reenter settings, which has been made freely available online. 
@@ -31,7 +31,7 @@
           </p>
       </div>
       <div id="floppy"><!--Floppy Container-->
-        <img src = images/Picture8.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right">
+        <img src = Images/Picture8.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right">
         <h2>Dirty or Jammed Floppy Drive</h2>
         <p>
           Dust in the floppy drive may make the drive not function properly, in addition to drive rails getting jammed after years of not being used.
