--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <header> 
-            <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+            <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
             <h1> Home </h1>
         </header> 
         <div>
-            <img src = images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
+            <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
         </div>
         <footer> 
             <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
