--- a/sixth.html
+++ b/sixth.html
@@ -8,12 +8,12 @@
     </head>
     <body>
       <header> 
-        <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+        <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
         <h1> Useful Resources</h1>
      </header> 
      <main>
         <div id="links"> <!--Keyboard Container-->
-          <img src = images/CroppedAd.png alt ="An ad boasting the Compaq's featues" width="838" height="585"> <!--Default Dimensions: 2513x1755--> 
+          <img src = Images/CroppedAd.png alt ="An ad boasting the Compaq's featues" width="838" height="585"> <!--Default Dimensions: 2513x1755--> 
           <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
           <h2>Amazon Links</h2>
           <p>
