--- a/third.html
+++ b/third.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <header> 
-        <img src = images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+        <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
         <h1> Portable III </h1>
      </header> 
      <main>
