--- a/third.html
+++ b/third.html
@@ -13,7 +13,7 @@
      </header> 
      <main>
         <div id="overview"> <!--Overview Container-->
-          <img src = images/Picture4.png alt ="An ad for the Portable III">
+          <img src = Images/Picture4.png alt ="An ad for the Portable III">
           <h2>Overview</h2>
           <p>Compaq was most famous for the Portable lineup in the 80s. 
             Able to do the impressive feat of making portable computers run better than the original IBM hardware they were “imitating”. 
@@ -28,7 +28,7 @@
           </p>
         </div>
         <div id="innovation"><!--Innovations Container-->
-          <img src = images/Picture5.png alt ="A magazine ad showing just how much smaller the Portable II was in relation to its predecessors">
+          <img src = Images/Picture5.png alt ="A magazine ad showing just how much smaller the Portable II was in relation to its predecessors">
           <h2>Innovations of the Portable Lineup</h2>
           <p>Compaq had to get creative when designing the portable lineup. Say you wanted to buy an IBM PC, you would have to choose a graphics card and the monitor to support it. 
             MDA (Monocrhome Display Adapter) Was a monochrome graphics mode typically in green or amber colors. 
