--- a/fourth.html
+++ b/fourth.html
@@ -2,8 +2,8 @@
 <html lang = "en">
     <head>
       <meta charset = "UTF-8">
-      <link rel ="stylesheet" href="StyleSheets/global.css">
-      <link rel ="stylesheet" href="StyleSheets/articles.css">
+             <!--<link rel ="stylesheet" href="StyleSheets/global.css">
+             <link rel ="stylesheet" href="StyleSheets/articles.css">-->
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -40,7 +40,8 @@
     </div>
     </main>
      <footer>
-        <a href="index.html">Home</a>
+        <a href="index.html">Home</a>  <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a> 
+        <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
      </footer>
    </body>
 </html> 
