--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <link rel ="stylesheet" href="StyleSheets/global.css">
+             <!--<link rel ="stylesheet" href="StyleSheets/global.css">
+             <link rel ="stylesheet" href="StyleSheets/articles.css">-->
         <title>Compaq Portable III Restoration</title>
     </head>
     <body>
