--- a/second.html
+++ b/second.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset = "UTF-8">
         <title>Compaq Portable III Restoration</title>
-        <link rel ="stylesheet" href="StyleSheets/global.css">
-        <link rel ="stylesheet" href="StyleSheets/articles.css">
+             <!--<link rel ="stylesheet" href="StyleSheets/global.css">
+             <link rel ="stylesheet" href="StyleSheets/articles.css">-->
     </head>
     <body>
         <header>
@@ -57,7 +57,8 @@
             </div>
         </main>
         <footer>
-            <a href="index.html">Home</a>
+            <a href="index.html">Home</a>   <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
+            <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
          </footer>
     </body>
     
