--- a/sixth.html
+++ b/sixth.html
@@ -2,8 +2,8 @@
 <html lang = "en">
     <head>
       <meta charset = "UTF-8">
-      <link rel ="stylesheet" href="StyleSheets/global.css">
-      <link rel ="stylesheet" href="StyleSheets/articles.css">
+      <!--<link rel ="stylesheet" href="StyleSheets/global.css">
+      <link rel ="stylesheet" href="StyleSheets/articles.css">-->
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -59,7 +59,8 @@
         </div>
      </main>
      <footer>
-        <a href="index.html">Home</a>
+        <a href="index.html">Home</a>  <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
+        <a href = "fifth.html">Advanced Issues</a> 
      </footer>
    </body>
 </html> 
