--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-             <!--<link rel ="stylesheet" href="StyleSheets/global.css">
-             <link rel ="stylesheet" href="StyleSheets/articles.css">-->
+             <link rel ="stylesheet" href="StyleSheets/global.css">
+             <link rel ="stylesheet" href="StyleSheets/articles.css">
         <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -14,9 +14,9 @@
         <div>
             <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
         </div>
-        <footer> 
+        <nav> 
             <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
             <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
-        </footer>
+        </nav>
     </body>
 </html>
