--- a/third.html
+++ b/third.html
@@ -2,8 +2,8 @@
 <html lang = "en">
     <head>
       <meta charset = "UTF-8">
-             <!--<link rel ="stylesheet" href="StyleSheets/global.css">
-             <link rel ="stylesheet" href="StyleSheets/articles.css">-->
+             <link rel ="stylesheet" href="StyleSheets/global.css">
+             <link rel ="stylesheet" href="StyleSheets/articles.css">
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
@@ -40,9 +40,9 @@
           </p>
       </div>
      </main>
-     <footer>
+     <nav>
         <a href="index.html">Home</a>  <a href = "second.html">Compaq History</a> <a href = "fourth.html">Common Issues</a> 
         <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
-     </footer>
+     </nav>
    </body>
 </html> 
