Added new content to history

--- a/second.html
+++ b/second.html
@@ -25,9 +25,9 @@
                     The first IBM PC
                 </h2>
                 <p>
-                    The IBM PC was a revolutionary piece of computing history, which made x86 architecture industry standard even to this day in addition to bringing MS DOS to the forefront of operating systems.
+                    The IBM PC was a revolutionary piece of computing history, which made x86 architecture industry standard even to this day in addition to bringing MS DOS to the forefront of operating systems since it was packaged with the PC.
                     To cut costs the IBM PC used entirely off the shelf parts, with the only thing IBM has legal stake over was its BIOS.
-                    This helped standardize computer architecture (beforehand there were over 100 different computer architectures most of which were incompatible with each other and brought up a slew of PC clones/compatibles.
+                    This helped standardize computer architecture (beforehand there were over 100 different computer architectures most of which were incompatible with each other) and brought up a slew of PC clones/compatibles.
                     Compaq made one of the earliest PC clones with the unique twist of making it portable that put them on the map
                 </p>
             </div>
@@ -52,7 +52,21 @@
                     Compaq Computer Corporation was founded on February 16, 1982 by Rod Canion, Bill Murto, and Jim Harris, former Texas Instrument employees who set out to pursue the exploding computer market.
                     Compaq was a pioneer in the IBM compatible/clone market, not only making one of the earliest compatibles, but having the computer be portable and pretty close to 100% compatible with IBM software making it a smash hit.
                     Compaq was famous for their portable lineup in the 80s, and also made desktops that undercut the competition. They were a force to be reckoned with in the 80s and early 90s, then became undercut by Dell in addition to failing to adapt to changes in the industry.
-                    Compaq was acquired by HP in 2001, who used their brand name to make low-end desktops which was discontinued in 2013. HP also provided support for Compaq machines for a time.
+                    Compaq was acquired by HP in 2001 for $25 billion, who used their brand name to make low-end desktops which was discontinued in 2013. HP also provided support for Compaq machines for a time.
+                </p>
+            </div>
+            <div id="IBMResponse">
+                <img src="Images/IBM5155.png" alt="The IBM 5155 PC" width="150" height="100">
+                <h2>
+                    IBM's Response to Compaq
+                </h2>
+                <p>
+                    After the success of the Compaq Portable I, a response from IBM was inevitable. IBM simply saw Compaq as another coppycat thorn in their side, 
+                    and figured they could flush them out if they made their own portable (The IBM 5155 model 68). At first when stores heard IBM was making their own 
+                    portable computer, they were more interested in original IBM PC hardware rather than the clones/compatibles. This halted the order of Compaq Portables. 
+                    Compaq had two choices, concede or wait for IBM to run into production errors. They chose the latter, continuing production as normal and had trucks filled to 
+                    the brim ready to ship to stores. IBM did run into production troubles, and stores wanted portable computers on their shelves, which Compaq was more than happy 
+                    to provide, cementing their success and making them the dominant force of portable computing in the 1980s. 
                 </p>
             </div>
         </main>
