--- a/third.html
+++ b/third.html
@@ -28,7 +28,7 @@
           </p>
         </div>
         <div id="innovation"><!--Innovations Container-->
-          <img src = Images/Picture5.png alt ="A magazine ad showing just how much smaller the Portable II was in relation to its predecessors">
+          <img src = Images/Picture5.png alt ="A magazine ad showing just how much smaller the Portable III was in relation to its predecessors">
           <h2>Innovations of the Portable Lineup</h2>
           <p>Compaq had to get creative when designing the portable lineup. Say you wanted to buy an IBM PC, you would have to choose a graphics card and the monitor to support it. 
             MDA (Monocrhome Display Adapter) Was a monochrome graphics mode typically in green or amber colors. 
