--- a/sixth.html
+++ b/sixth.html
@@ -53,8 +53,8 @@
             <h2>Important Files</h2>
             <p>
                 Diagnostic Floppy Disk, allows for access to BIOS and configure settings/troubleshoot 
-                <a href="Otherlinks/Compaq_Portable_Diagnostic_Disk.img" target="_blank">.img of Diagnostic Floppy</a>
-                <a href="OtherLinks/Diagnostic_Disk_Raw.zip" target="_blank">raw diagnostic files, ready to copy onto a physical disk</a>
+                <a href="Otherlinks/Compaq_Portable_Diagnostic_Disk.img" target="_blank" style="color: #10e0c8">.img of Diagnostic Floppy</a>
+                <a href="OtherLinks/Diagnostic_Disk_Raw.zip" target="_blank" style="color: #10e0c8">raw diagnostic files, ready to copy onto a physical disk</a>
             </p>
         </div>
      </main>
