Moved menu to top right

--- a/fifth.html
+++ b/fifth.html
@@ -28,9 +28,14 @@
           </p>
         </div>
      </main>
-     <nav>
-        <a href="index.html">Home</a>  <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
-        <a href = "sixth.html">Useful Resources</a>
+     <nav role="navigation">
+      <ul>
+        <li><a href = "index.html">Home</a></li> 
+        <li><a href = "second.html">Compaq History</a></li>  
+        <li><a href = "third.html">Portable III</a></li> 
+        <li><a href = "fourth.html">Common Issues</a></li>
+        <li><a href = "sixth.html">Useful Resources</a></li>
+      </ul>
      </nav>
    </body>
 </html> 
