--- a/third.html
+++ b/third.html
@@ -40,9 +40,14 @@
           </p>
       </div>
      </main>
-     <nav>
-        <a href="index.html">Home</a>  <a href = "second.html">Compaq History</a> <a href = "fourth.html">Common Issues</a> 
-        <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
-     </nav>
+     <nav role="navigation">
+      <ul>
+        <li><a href = "index.html">Home</a></li> 
+        <li><a href = "second.html">Compaq History</a></li>  
+        <li><a href = "fourth.html">Common Issues</a></li>
+        <li><a href = "fifth.html">Advanced Issues</a></li>
+        <li><a href = "sixth.html">Useful Resources</a></li>
+      </ul>
+   </nav>
    </body>
 </html> 
