--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
         <div>
             <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
         </div>
-        <nav> 
-            <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
-            <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
-        </nav>
+        <nav role="navigation">
+            <ul> 
+              <li><a href = "second.html">Compaq History</a></li>  
+              <li><a href = "third.html">Portable III</a></li> 
+              <li><a href = "fourth.html">Common Issues</a></li>
+              <li><a href = "fifth.html">Advanced Issues</a></li>
+              <li><a href = "sixth.html">Useful Resources</a></li>
+            </ul>
+         </nav>
     </body>
 </html>
