--- a/second.html
+++ b/second.html
@@ -70,10 +70,15 @@
                 </p>
             </div>
         </main>
-        <nav>
-            <a href="index.html">Home</a>   <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
-            <a href = "fifth.html">Advanced Issues</a>  <a href = "sixth.html">Useful Resources</a>
-        </nav>
+        <nav role="navigation">
+            <ul>
+              <li><a href = "index.html">Home</a></li>   
+              <li><a href = "third.html">Portable III</a></li> 
+              <li><a href = "fourth.html">Common Issues</a></li>
+              <li><a href = "fifth.html">Advanced Issues</a></li>
+              <li><a href = "sixth.html">Useful Resources</a></li>
+            </ul>
+         </nav>
     </body>
     
 </html>
