--- a/sixth.html
+++ b/sixth.html
@@ -58,9 +58,14 @@
             </p>
         </div>
      </main>
-     <nav>
-        <a href="index.html">Home</a>  <a href = "second.html">Compaq History</a>  <a href = "third.html">Portable III</a>   <a href = "fourth.html">Common Issues</a> 
-        <a href = "fifth.html">Advanced Issues</a> 
+     <nav role="navigation">
+        <ul>
+          <li><a href="index.html">Home</a></li> 
+          <li><a href = "second.html">Compaq History</a></li>  
+          <li><a href = "third.html">Portable III</a></li> 
+          <li><a href = "fourth.html">Common Issues</a></li>
+          <li><a href = "fifth.html">Advanced Issues</a></li>
+        </ul>
      </nav>
    </body>
 </html> 
