Added more content and more specific styling

--- a/sixth.html
+++ b/sixth.html
@@ -15,7 +15,7 @@
         <div id="links"> <!--Keyboard Container-->
           <img src = Images/CroppedAd.png alt ="An ad boasting the Compaq's featues" width="838" height="585"> <!--Default Dimensions: 2513x1755--> 
           <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
-          <h2>Amazon Links</h2>
+          <h2>Links for Materials</h2>
           <p>
             <a href="https://www.amazon.com/Keyboard-Extension-Female-Conductor-Straight/dp/B000I94JXM" target="_blank">Replacement Keyboard Cable</a>
           </p>
@@ -38,6 +38,9 @@
                 A USB Floppy Drive
             </a> is useful for finding important files online. 
           </p>
+          <p>
+            <a href="https://www.digikey.com">Digikey</a> and <a href="https://www.mouser.com">Mouser</a> are the go-to sites for electronic components, such as replaement capacitors.
+          </p>
         </div>
         <div id="manual">
             <h2>Manuals</h2>
@@ -48,13 +51,20 @@
                 <a href="OtherLinks/Maintenence Manual.pdf" target="_blank">Technician's Manual(386 Version)</a> Many of the features outside of the different motherboards are interchangable, 
                 the 286 manual seems to be harder to find. 
             </p>
+            <p>
+              <a href="OtherLinks/CMOS_Replacement_DataSheet.pdf" target="_blank">The best candidate for CMOS replacment</a>, a more modern counterpart made by the same 
+              manufacturer as the original and able to have a custom layout at the manufacturer's request if one of the existing ones do not quite work. The 7TC-7PN model appears to best fit the 
+              profile of the original CMOS.
+            </p>
         </div>
         <div id="files">
             <h2>Important Files</h2>
             <p>
                 Diagnostic Floppy Disk, allows for access to BIOS and configure settings/troubleshoot 
-                <a href="Otherlinks/Compaq_Portable_Diagnostic_Disk.img" target="_blank" style="color: #10e0c8">.img of Diagnostic Floppy</a>
-                <a href="OtherLinks/Diagnostic_Disk_Raw.zip" target="_blank" style="color: #10e0c8">raw diagnostic files, ready to copy onto a physical disk</a>
+                <ul>
+                  <li><a href="Otherlinks/Compaq_Portable_Diagnostic_Disk.img" target="_blank" style="color: #10e0c8">.img of Diagnostic Floppy</a></li>
+                  <li><a href="OtherLinks/Diagnostic_Disk_Raw.zip" target="_blank" style="color: #10e0c8">raw diagnostic files, ready to copy onto a physical disk</a></li>
+                </ul>
             </p>
         </div>
      </main>
