Major styling changes

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
             <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
             <h1> Home </h1>
         </header> 
-        <div>
+        <div class="HomeImage">
             <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
         </div>
-        <nav role="navigation">
+        <footer>
             <ul> 
-              <li><a href = "second.html">Compaq History</a></li>  
-              <li><a href = "third.html">Portable III</a></li> 
-              <li><a href = "fourth.html">Common Issues</a></li>
-              <li><a href = "fifth.html">Advanced Issues</a></li>
-              <li><a href = "sixth.html">Useful Resources</a></li>
+              <li><button class="HomeButtons"><a href = "second.html">Compaq History</a></button></li>  
+              <li><button class="HomeButtons"><a href = "third.html">Portable III</a></button></li> 
+              <li><button class="HomeButtons"><a href = "fourth.html">Common Issues</a></button></li>
+              <li><button class="HomeButtons"><a href = "fifth.html">Advanced Issues</a></button></li>
+              <li><button class="HomeButtons"><a href = "sixth.html">Useful Resources</a></button></li>
             </ul>
-         </nav>
+        </footer>
     </body>
 </html>
