Added more content and images

--- a/third.html
+++ b/third.html
@@ -13,7 +13,7 @@
      </header> 
      <main>
         <div id="overview"> <!--Overview Container-->
-          <img src = Images/Picture4.png alt ="An ad for the Portable III">
+          <img src = Images/PortableIIIad.png alt ="An ad for the Portable III">
           <h2>Overview</h2>
           <p>Compaq was most famous for the Portable lineup in the 80s. 
             Able to do the impressive feat of making portable computers run better than the original IBM hardware they were “imitating”. 
@@ -39,6 +39,28 @@
             The built-in monitor for most Portables was monochrome, but CGA could be fully utilized on an external monitor. 
             The hybrid card could be hard-set to one mode and by default it could also swap on the fly based on software needs. 
           </p>
+        </div>
+        <div id="Expansion">
+          <img src= Images/ExpansionModule.png alt="An optional attachment which came with two expansion slots">
+          <h2>Expandability</h2>
+          <p>
+            In addition to their portability (relative to the even larger desktops of the era), Compaq Portables were also expandable allowing for more RAM, storage, the addition of a modem 
+            and the addition of other peripherals such as sound cards. These expansion slots used what was known as ISA (Industry Standard Architecture). Expandability looks
+            quite reasonable in the Portable I or II as they are about the size of briefcases, but you may wonder how the Portable III pulled this off. The answer was the option 
+            of buying a little sidecar-type attachment with your Portable III, which plugged into the back of the machine and gave 2 ISA slots. In the Operations User Manual it is 
+            primarily advertised as a backup hard drive expansion unit. With mine there was a joystick port expansion card and an IEEE-488 port in the expansion unit. The Portable PortableIII
+            also had two internal expansion slots but they only supported propietary modems and RAM expansions. 
+          </p>
+        </div>
+      <div id="WhatNext">
+        <img src = Images/Portable486.png alt="The last Portable made by Compaq">
+        <h2>After the Portable III</h2>
+        <p>
+          In 1991 one last "luggable" would come out, the Portable 486/486c. This utilized the Intel 486 CPU at 33MHz and had 4-32MB of RAM. The 486c is notable as 
+          it has a full color screen, instead of the monochrome green or amber of its predacessors. By this point, however the luggable era was over and laptops were 
+          entering the scene. Compaq themselves began making laptops shortly after the Portable III hit store shelves. The portable 486 was discontinued in 1999, and while
+          486c implies there was a monochrome or other variant that lacked full color, there is no evidence of this variant existing. The 486 overall seems to be obscure and rare. 
+        </p> 
       </div>
      </main>
      <nav role="navigation">
