--- a/sixth.html
+++ b/sixth.html
@@ -48,7 +48,7 @@
           </p>
           
           <p>
-            <a href="https://www.digikey.com" target="_blank">Digikey</a> and <a href="https://www.mouser.com" target="_blank">Mouser</a> are the go-to sites for electronic components, such as replaement capacitors.
+            <a href="https://www.digikey.com" target="_blank">Digikey</a> and <a href="https://www.mouser.com" target="_blank">Mouser</a> are the go-to sites for electronic components, such as replacement capacitors.
           </p>
         </div>
         
