--- a/third.html
+++ b/third.html
@@ -48,7 +48,7 @@
             and the addition of other peripherals such as sound cards. These expansion slots used what was known as ISA (Industry Standard Architecture). Expandability looks
             quite reasonable in the Portable I or II as they are about the size of briefcases, but you may wonder how the Portable III pulled this off. The answer was the option 
             of buying a little sidecar-type attachment with your Portable III, which plugged into the back of the machine and gave 2 ISA slots. In the Operations User Manual it is 
-            primarily advertised as a backup hard drive expansion unit. With mine there was a joystick port expansion card and an IEEE-488 port in the expansion unit. The Portable PortableIII
+            primarily advertised as a backup hard drive expansion unit. With mine there was a joystick port expansion card and an IEEE-488 port in the expansion unit. The PortableIII
             also had two internal expansion slots but they only supported propietary modems and RAM expansions. 
           </p>
         </div>
