Started Styling Headers

--- a/third.html
+++ b/third.html
@@ -7,9 +7,11 @@
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
-      <header> 
-        <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
-        <h1> Portable III </h1>
+      <header>
+        <div class="PageTitle">
+          <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+          <h1> Portable III </h1>
+        </div>
      </header> 
      <main>
         <div id="overview"> <!--Overview Container-->
