Refined header border

--- a/fourth.html
+++ b/fourth.html
@@ -7,10 +7,12 @@
       <title>Compaq Portable III Restoration</title>
     </head>
     <body>
-      <header> 
-        <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
-        <h1> Common Issues </h1>
-     </header> 
+      <header>
+        <div class="PageTitle">
+          <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+          <h1> Common Issues </h1>
+        </div>
+    </header>  
      <main>
         <div id="KeyboardCable"> <!--Keyboard Container-->
           <img src = Images/Picture6.png alt ="A picture of a rotting keyboard cable">
