--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <title>Compaq Portable III Restoration</title>
     </head>
     <body>
-        <header> 
-            <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
-            <h1> Home </h1>
+        <header>
+            <div class="PageTitle">
+              <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+              <h1> Home </h1>
+            </div>
         </header> 
         <div class="HomeImage">
             <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
