--- a/second.html
+++ b/second.html
@@ -8,15 +8,11 @@
     </head>
     <body>
         <header>
-            <div>
-                <img src="Images/Compaq-Logo-1982.png" alt="Compaq Logo from 1982" width="200" height="150">
+            <div class="PageTitle">
+              <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+              <h1> History of Compaq </h1>
             </div>
-            <div>
-                <h1>
-                    History of Compaq
-                </h1>
-            </div>
-        </header>
+        </header> 
         <main>
             <div id="IBMPC">
                 <!--IBM PC Container-->
