--- a/sixth.html
+++ b/sixth.html
@@ -8,11 +8,12 @@
     </head>
     
     <body>
-      <header> 
-        <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
-        <h1> Useful Resources</h1>
-     </header> 
-     
+      <header>
+        <div class="PageTitle">
+          <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+          <h1> Useful Resources </h1>
+        </div>
+    </header> 
      <main>
         <div id="links"> <!--Keyboard Container-->
           <img src = Images/CroppedAd.png alt ="An ad boasting the Compaq's featues" width="838" height="585"> <!--Default Dimensions: 2513x1755--> 
