--- a/second.html
+++ b/second.html
@@ -67,7 +67,7 @@
             </div>
         </main>
         <nav role="navigation">
-            <ul>
+            <ul class="Dropdown Content">
               <li><a href = "index.html">Home</a></li>   
               <li><a href = "third.html">Portable III</a></li> 
               <li><a href = "fourth.html">Common Issues</a></li>
