--- a/sixth.html
+++ b/sixth.html
@@ -81,7 +81,7 @@
      </main>
      
      <nav role="navigation">
-        <ul>
+        <ul class="Dropdown Content">
           <li><a href="index.html">Home</a></li> 
           <li><a href = "second.html">Compaq History</a></li>  
           <li><a href = "third.html">Portable III</a></li> 
