--- a/third.html
+++ b/third.html
@@ -66,7 +66,7 @@
       </div>
      </main>
      <nav role="navigation">
-      <ul>
+      <ul class="Dropdown Content">
         <li><a href = "index.html">Home</a></li> 
         <li><a href = "second.html">Compaq History</a></li>  
         <li><a href = "fourth.html">Common Issues</a></li>
