Implemented dropdown menu, is still a little buggy

--- a/sixth.html
+++ b/sixth.html
@@ -81,7 +81,8 @@
      </main>
      
      <nav role="navigation">
-        <ul class="Dropdown Content">
+      <button class="DropdownButton">Navigation</button>
+        <ul class="DropdownContent">
           <li><a href="index.html">Home</a></li> 
           <li><a href = "second.html">Compaq History</a></li>  
           <li><a href = "third.html">Portable III</a></li> 
