--- a/fourth.html
+++ b/fourth.html
@@ -42,13 +42,14 @@
     </div>
     </main>
     <nav role="navigation">
-      <ul class="Dropdown Content">
-        <li><a href = "index.html">Home</a></li> 
-        <li><a href = "second.html">Compaq History</a></li>  
+      <button class="DropdownButton">Navigation</button>
+      <ul class="DropdownContent">
+        <li><a href = "index.html">Home</a></li>
+        <li><a href = "second.html">Compaq History</a></li>
         <li><a href = "third.html">Portable III</a></li>
         <li><a href = "fifth.html">Advanced Issues</a></li>
         <li><a href = "sixth.html">Useful Resources</a></li>
-      </ul>
+      </div>
     </nav>
    </body>
 </html> 
