--- a/third.html
+++ b/third.html
@@ -66,7 +66,8 @@
       </div>
      </main>
      <nav role="navigation">
-      <ul class="Dropdown Content">
+      <button class="DropdownButton">Navigation</button>
+      <ul class="DropdownContent">
         <li><a href = "index.html">Home</a></li> 
         <li><a href = "second.html">Compaq History</a></li>  
         <li><a href = "fourth.html">Common Issues</a></li>
