--- a/third.html
+++ b/third.html
@@ -58,10 +58,14 @@
         <img src = Images/Portable486.png alt="The last Portable made by Compaq">
         <h2>After the Portable III</h2>
         <p>
-          In 1991 one last "luggable" would come out, the Portable 486/486c. This utilized the Intel 486 CPU at 33MHz and had 4-32MB of RAM. The 486c is notable as 
+          In 1991 one last "luggable" would come out, the Portable 486. This utilized the Intel 486 CPU at 33MHz and had 4-32MB of RAM. The 486c is notable as 
           it has a full color screen, instead of the monochrome green or amber of its predacessors. By this point, however the luggable era was over and laptops were 
-          entering the scene. Compaq themselves began making laptops shortly after the Portable III hit store shelves. The portable 486 was discontinued in 1999, and while
-          486c implies there was a monochrome or other variant that lacked full color, there is no evidence of this variant existing. The 486 overall seems to be obscure and rare. 
+          entering the scene. Compaq themselves began making laptops shortly after the Portable III hit store shelves. The portable 486 was discontinued in 1999, and a contributor 
+          its long life despite the end of the luggable era amounted to the niche uses utlized for it. The 486 was widely used as a network sniffer and a portable presentation tool. 
+          While laptops were more widely available and more on par with desktops in terms of power, they lacked digital sound cards and their displays were often quite dim. The 
+          Portable 486 had ISA expansion slots, which sound cards were common options to insert into these slots in additio additional ports. These features made it a good option for 
+          people who gave frequent presentations on the road. Despite carving this niche, the 486 still did not sell well overall, but was still known for its quality and power like 
+          the Portables that came before it. 
         </p> 
       </div>
      </main>
