--- a/third.html
+++ b/third.html
@@ -63,7 +63,7 @@
           entering the scene. Compaq themselves began making laptops shortly after the Portable III hit store shelves. The portable 486 was discontinued in 1999, and a contributor 
           its long life despite the end of the luggable era amounted to the niche uses utlized for it. The 486 was widely used as a network sniffer and a portable presentation tool. 
           While laptops were more widely available and more on par with desktops in terms of power, they lacked digital sound cards and their displays were often quite dim. The 
-          Portable 486 had ISA expansion slots, which sound cards were common options to insert into these slots in additio additional ports. These features made it a good option for 
+          Portable 486 had ISA expansion slots, which sound cards were common options to insert into these slots in addition additional ports. These features made it a good option for 
           people who gave frequent presentations on the road. Despite carving this niche, the 486 still did not sell well overall, but was still known for its quality and power like 
           the Portables that came before it. 
         </p> 
