--- a/fourth.html
+++ b/fourth.html
@@ -24,7 +24,7 @@
           </p>
         </div>
         <div id="cmos"><!--CMOS Container-->
-          <img src = Images/CMOSBattery.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right" width="200" height="200">
+          <img src = Images/CMOSBattery.PNG alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right" width="200" height="200">
           <h2>Dead CMOS Battery</h2>
           <p>
             This issue may only become apparent later, as sometimes the battery still has some juice in it upon bootup. You need the diagnostics floppy disk to access the BIOS and reenter settings, which has been made freely available online. 
