moved home nav to top

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
         </div>
         <footer>
+        <div class="HomeNav">
             <ul> 
               <li><button class="HomeButtons"><a href = "second.html">Compaq History</a></button></li>  
               <li><button class="HomeButtons"><a href = "third.html">Portable III</a></button></li> 
@@ -24,6 +25,7 @@
               <li><button class="HomeButtons"><a href = "fifth.html">Advanced Issues</a></button></li>
               <li><button class="HomeButtons"><a href = "sixth.html">Useful Resources</a></button></li>
             </ul>
+        </div>
         </footer>
     </body>
 </html>
